--- a/requirements.yml
+++ b/requirements.yml
@@ -1,9 +1,9 @@
-- src: http://github.com/websoft9dev/role_common
+- src: http://github.com/websoft9/role_common
 
-- src: http://github.com/websoft9dev/role_oracle
+- src: http://github.com/websoft9/role_oracle
 
-- src: http://github.com/websoft9dev/role_jdk
+- src: http://github.com/websoft9/role_jdk
 
-- src: http://github.com/websoft9dev/role_preend
+- src: http://github.com/websoft9/role_preend
 
-- src: http://github.com/websoft9dev/role_end
+- src: http://github.com/websoft9/role_end
