--- a/requirements.yml
+++ b/requirements.yml
@@ -1,9 +1,5 @@
 - src: http://github.com/websoft9/role_common
 
-- src: http://github.com/websoft9/role_oracledb
+- src: http://github.com/websoft9/role_cloud
 
 - src: http://github.com/websoft9/role_jdk
-
-- src: http://github.com/websoft9/role_preend
-
-- src: http://github.com/websoft9/role_end
