--- a/oracledatabase.yml
+++ b/oracledatabase.yml
@@ -12,6 +12,7 @@
     - git:
        repo: "https://github.com/Websoft9/role_oracledb"
        dest: "/data/ansible-oracle"
+       version: dev
 
   roles:
     - {role: role_common, tags: "role_common"}  
