--- a/oracledatabase.yml
+++ b/oracledatabase.yml
@@ -8,8 +8,9 @@
   vars_files:
     - vars/main.yml
     
-  pre_tasks:  
-    - git:
+  pre_tasks:
+    - name: Clone role_oracledb to remote 
+      git:
        repo: "https://github.com/Websoft9/role_oracledb"
        dest: "/data/ansible-oracle"
        version: dev
