--- a/requirements.yml
+++ b/requirements.yml
@@ -3,3 +3,7 @@
 - src: http://github.com/websoft9/role_cloud
 
 - src: http://github.com/websoft9/role_jdk
+
+- src: http://github.com/websoft9/role_preend
+
+- src: http://github.com/websoft9/role_end
