--- a/oracledatabase.yml
+++ b/oracledatabase.yml
@@ -9,10 +9,13 @@
     - vars/main.yml
     
   pre_tasks:
+    - name: Create dir for oracledb
+      file: path=/data/oracle recurse=yes state=directory
+
     - name: Clone role_oracledb to remote 
       git:
        repo: "https://github.com/Websoft9/role_oracledb"
-       dest: "/data/ansible-oracle"
+       dest: "/data/role-oracle"
        version: dev
 
   roles:
