--- a/oracledatabase.yml
+++ b/oracledatabase.yml
@@ -9,8 +9,8 @@
     - vars/main.yml
     
   pre_tasks:
-    - name: Create dir for oracledb
-      file: path=/data/db/oracle recurse=yes state=directory
+    - name: Create dir for as oracle database install_dir
+      file: path={{oracledb_dir}} recurse=yes state=directory
 
     - name: Clone role_oracledb to remote 
       git:
