--- a/vars/main.yml
+++ b/vars/main.yml
@@ -2,4 +2,4 @@ common_os_support: ["CentOS", "OracleLinux"]
 
 jdk_version: "8" 
 
-oracledb_dir: "/data/db/oracle"
+oracledb_install_dir: "/data/oracledb_install"
